--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             window.open('https://zalo.me/0904639896', '_blank');
         });
     </script>
+    <!-- End Chat Zalo -->
 
+    <div id="top"></div>
     <header class="top-bar modern-marquee">
         <div class="marquee-content">
             <p>Mọi thông tin cần tìm hiểu về dịch vụ dạy lái xe trên công nghệ giả lập và bổ túc tay lái mới xin quý khách vui lòng liên hệ hotline: 09.8888.2266.
@@ -82,7 +84,7 @@
             <div class="contact">
                 <span><i class="fa-solid fa-phone" style="color: #b30000;"></i> Thầy Tuấn - Tiếp nhận đăng ký hồ sơ: <a href="tel:0904639896">0904.639.896</a></span>
                 <span><i class="fa-solid fa-square-phone-flip"style="color: #b30000"></i> Hotline Taylaimoi.com: <a href="tel:0988882266">09.8888.2266</a></span>
-                <span><i class="fa-solid fa-house" style="color: #b30000"></i>  Thư CSKH: <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
+                <span><i class="fa-solid fa-house" style="color: #b30000"></i> Thư CSKH: <a href="mailto:Taylaimoi226@gmail.com">Taylaimoi2266@gmail.com</a> </span>
                 <span><i class="fa-solid fa-envelope-open-text" style="color: #b30000"></i> Địa chỉ:<b> 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</b></span>
             </div>
         </div>
@@ -256,17 +258,29 @@
 
         <section class="other-section">
             <h3>DANH MỤC KHÁC</h3>
-            <div class="box">
-                <p><strong>Ôn tập 120 tình huống mô phỏng</strong></p>
-                <p>Số câu: 120 | Phiên bản: Mới nhất</p>
-                <a href="https://120mophong.com/" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
-            </div>
-            <div class="box">
-                <p><strong>Mẹo thi lý thuyết</strong></p>
-                <p>Số câu: 600 | Phiên bản: Mới nhất</p>
-                <a href="Meo.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
-            </div>
+            <div class="other-grid">
+                <div class="box">
+                    <p><strong>Ôn tập đề thi lý thuyết 600 câu</strong></p>
+                    <p>Số câu: 600 | Phiên bản: Mới nhất</p>
+                    <a href="exam.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
+                <div class="box">
+                    <p><strong>Ôn tập 120 tình huống mô phỏng</strong></p>
+                    <p>Số câu: 120 | Phiên bản: Mới nhất</p>
+                    <a href="https://120mophong.com/" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
+                <div class="box">
+                    <p><strong>Mẹo thi lý thuyết</strong></p>
+                    <p>Số câu: 600 | Phiên bản: Mới nhất</p>
+                    <a href="Meo.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
+                <div class="box">
+                    <p><strong>11 Bài sa hình</strong></p>
+                    <p>Phiên bản: Mới nhất</p>
+                    <a href="Sahinh.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
         </section>
+
 
         <!--Hình ảnh tiêu biểu-->
         <!-- Carousel Hình Ảnh Tiêu Biểu -->
@@ -373,8 +387,15 @@
             <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video">
                 <img src="image/icons8_tiktok.svg" alt="Xem Video"> Tiktok Taylaimoi
             </a>
+            <a href="https://www.youtube.com/@taylaimoi" class="youtube-button" target="_blank" title="Xem Video">
+                <img src="image/icons8_youtube.svg" alt="Xem Video"> Youtube Taylaimoi
+            </a>
             <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
             <div class="sub-text"> (©) Bản quyền của thương hiệu Taylaimoi.com | Thiết kế bởi letuantbvn </div>
+            <!-- Back to Top Button -->
+            <div class="back-to-top">
+                <a href="#top" title="Trở về đầu trang"><i class="fas fa-arrow-up"></i></a>
+            </div>
         </div>
     </footer>
 
