--- a/Gallery.html
+++ b/Gallery.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <div id="top"></div>
     <!-- Chat Zalo -->
     <div id="zalo-chat-btn" class="zalo-chat-btn">
         <img src="image/icon_zalo.svg" alt="Chat Zalo">
@@ -336,8 +337,15 @@
             <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video">
                 <img src="image/icons8_tiktok.svg" alt="Xem Video"> Tiktok Taylaimoi
             </a>
+            <a href="https://www.youtube.com/@taylaimoi" class="youtube-button" target="_blank" title="Xem Video">
+                <img src="image/icons8_youtube.svg" alt="Xem Video"> Youtube Taylaimoi
+            </a>
             <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
             <div class="sub-text"> (©) Bản quyền của thương hiệu Taylaimoi.com | Thiết kế bởi letuantbvn </div>
+            <!-- Back to Top Button -->
+            <div class="back-to-top">
+                <a href="#top" title="Trở về đầu trang"><i class="fas fa-arrow-up"></i></a>
+            </div>
         </div>
     </footer>
 
