--- a/Meo.html
+++ b/Meo.html
@@ -259,6 +259,7 @@
     </script>
     <!--End of Tawk.to Script-->
 
+    <div id="top"></div>
     <header class="top-bar modern-marquee">
         <div class="marquee-content">
             <p style="margin-bottom: 0;">Mọi thông tin cần tìm hiểu về dịch vụ dạy lái xe trên công nghệ giả lập và bổ túc tay lái mới xin quý khách vui lòng liên hệ hotline: 09.8888.2266.
@@ -362,7 +363,36 @@
                 <div id="gallery-sahinh" class="gallery"></div>
             </div>
         </div>
+
+        <!-- Other Section -->
+        <div class="other-section">
+            <h3>DANH MỤC KHÁC</h3>
+            <div class="other-grid">
+                <div class="box">
+                    <p><strong>Ôn tập đề thi lý thuyết 600 câu</strong></p>
+                    <p>Số câu: 600 | Phiên bản: Mới nhất</p>
+                    <a href="exam.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
+                <div class="box">
+                    <p><strong>Ôn tập 120 tình huống mô phỏng</strong></p>
+                    <p>Số câu: 120 | Phiên bản: Mới nhất</p>
+                    <a href="https://120mophong.com/" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
+                <div class="box">
+                    <p><strong>11 bài sa hình</strong></p>
+                    <p>Phiên bản: Mới nhất</p>
+                    <a href="Sahinh.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
+                <div class="box">
+                    <p><strong>Thư viện ảnh</strong></p>
+                    <p>Số ảnh: 1000+ | Phiên bản: Mới nhất</p>
+                    <a href="Gallery.html" target="_blank" class="btn-outline">➜ Tham khảo ngay</a>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 
     <!-- Footer -->
     <footer id="footer">
@@ -378,8 +408,15 @@
             <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video">
                 <img src="image/icons8_tiktok.svg" alt="Xem Video"> Tiktok Taylaimoi
             </a>
+            <a href="https://www.youtube.com/@taylaimoi" class="youtube-button" target="_blank" title="Xem Video">
+                <img src="image/icons8_youtube.svg" alt="Xem Video"> Youtube Taylaimoi
+            </a>
             <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
             <div class="sub-text"> (©) Bản quyền của thương hiệu Taylaimoi.com | Thiết kế bởi letuantbvn </div>
+            <!-- Back to Top Button -->
+            <div class="back-to-top">
+                <a href="#top" title="Trở về đầu trang"><i class="fas fa-arrow-up"></i></a>
+            </div>
         </div>
     </footer>
 
